@@ -1,3 +1,7 @@
+2012-06-19  Frank Warmerdam  <warmerdam@google.com>
+
+	* libtiff/tif_packbits.c: fix read past end of data buffer. 
+
 2012-06-15  Frank Warmerdam  <warmerdam@google.com>
 
 	*  libtiff 4.0.2 released.
